# hid-bpf-uclogic

./: .gitattributes  Cargo.toml  README.md  build.rs  flake.nix
.cargo/: config.toml
bpf/: uclogic.bpf.c
doc/: protocol_v2.md
hid-bpf-uclogic-test/: Cargo.toml  bpf  build.rs
hid-bpf-uclogic-test/src/: lib.rs
hid-bpf-uclogic-test/src/snapshots/: hid_bpf_uclogic_test__button.snap  hid_bpf_uclogic_test__dial.snap  hid_bpf_uclogic_test__pen_buttons.snap  hid_bpf_uclogic_test__pen_movement.snap  hid_bpf_uclogic_test__pen_pressure.snap  hid_bpf_uclogic_test__pen_tilt.snap
hid-bpf-uclogic/bpf/: uclogic.bpf.c
hid-bpf-uclogic/src/: descriptor.j2  descriptor.rs  main.rs  sysfs.rs
hid-bpf-uclogic/src/snapshots/: hid_bpf_uclogic__descriptor__tests__desc.snap  hid_bpf_uclogic__descriptor__tests__less_buttons_desc.snap
nix/: dev.nix  package.nix
src/: descriptor.j2  descriptor.rs  main.rs  mk_template.h  sysfs.rs  uclogic.bpf.c  uclogic_v2.in.h
src/snapshots/: hid_bpf_uclogic__descriptor__descriptor_test_less_buttons.snap
