[package]
name = "hid-bpf-uclogic"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", default-features = false, features = ["help", "suggestions", "usage", "std"] }
hex = "0.4.3"
libbpf-rs = "0.24.8"
libc = "0.2.172"
minijinja = "2.9.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
